Repo Structure and Ticketing System

--- a/code/index.html
+++ b/code/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Giorgio's Support</title>
+        <title>MyAuxilium</title>
         <style>
             a{
                 text-align:center;
@@ -19,7 +19,7 @@
         </style>
     </head>
     <body>
-        <h1>Welcome to Giorgio's Support</h1>
+        <h1>Welcome to MyAuxilium</h1>
         <h2>How can I help?</h2>
         <a href="/openticket.php">Request Support</a><br>
         <a href="/articles/index.html">Support Articles </a><br>
